--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "main": "index.js",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "dependencies": {
     "acorn": "^8.8.0",
@@ -236,6 +237,7 @@
     "punycode": "^2.1.1",
     "queue-microtask": "^1.2.3",
     "react-is": "^18.2.0",
+    "readline-sync": "^1.4.10",
     "regexp.prototype.flags": "^1.4.3",
     "regexpp": "^3.2.0",
     "require-directory": "^2.1.1",
