--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,18 @@
 env:
   node: true
   es2021: true
-extends: airbnb-base
+extends:
+  - airbnb-base
+  - prettier
 overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {
-   "no-console": "off",
-   "import/extensions": "off",
-}
+plugins:
+  - prettier
+rules:
+  {
+    'prettier/prettier': 'error',
+    'no-console': 'off',
+    'import/extensions': 'off',
+  }
