--- a/package.json
+++ b/package.json
@@ -1,11 +1,4 @@
 {
-  "devDependencies": {
-    "eslint": "^8.37.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1"
-  },
   "name": "@hexlet/code",
   "description": "Brain_Games",
   "version": "1.0.0",
@@ -19,12 +12,15 @@
     "brain-prime": "bin/brain-prime.js"
   },
   "dependencies": {
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-module-utils": "^2.7.4",
-    "eslint-scope": "^7.1.1",
-    "eslint-utils": "^3.0.0",
-    "eslint-visitor-keys": "^3.3.0",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "3.2.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
